--- a/kubernetes/manifests-logging/elasticsearch.yml
+++ b/kubernetes/manifests-logging/elasticsearch.yml
@@ -14,7 +14,7 @@ spec:
         name: elasticsearch
     spec:
       containers:
-       - image: elasticsearch
+       - image: mirrorgooglecontainers/elasticsearch:v5.6.4
          name: elasticsearch
          ports:
           - name: elasticsearch
